tests/paczka1/small_fuzzy/21000040.err
Error in line 1: 3whOv1yjAN4 S903 4,7
Error in line 5: XfKt A36 52,3
